--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "Sitnikovik\\ArrayToObjectSerializer\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Sitnikovik\\ArrayToObjectSerializer\\Tests": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Ilya Sitnikov",
@@ -16,5 +21,8 @@
     ],
     "require": {
         "php": ">=7.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.6"
     }
 }
